# Taskell

./: README.md  Taskell.cabal
app/: Main.hs
src/: Deadline.hs  Filters.hs  Persistence.hs  TaskManager.hs  Types.hs
src/CLI/: DeadlineMenu.hs  FiltersMenu.hs  Interface.hs  PersistenceMenu.hs  TaskManagerMenu.hs
test/: Main.hs
